--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
   "author": "rfq13",
   "license": "MIT",
   "dependencies": {
+    "@translate-tools/core": "0.0.15",
     "assert": "^2.0.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
-    "express-validator": "^6.12.1",
+    "express-validator": "^6.12.2",
     "gyp": "^0.5.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongodb": "^3.6.11",
-    "mongoose": "^5.13.7",
-    "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^2.0.12",
+    "mongodb": "^3.7.1",
+    "mongoose": "^5.13.9",
+    "mongoose-unique-validator": "^2.0.4",
+    "nodemon": "^2.0.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -36,7 +38,8 @@
     "qrcode": "^1.4.4",
     "sastrawijs": "^1.0.4",
     "socket.io": "^3.1.2",
-    "whatsapp-web.js": "^1.14.0"
+    "translatte": "^3.0.1",
+    "whatsapp-web.js": "^1.14.1"
   },
   "devDependencies": {
     "dotenv": "^8.6.0"
