--- a/package.json
+++ b/package.json
@@ -22,26 +22,27 @@
     "express-fileupload": "^1.2.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
-    "express-validator": "^6.12.2",
+    "express-validator": "^6.13.0",
     "gyp": "^0.5.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongodb": "^3.7.1",
-    "mongoose": "^5.13.9",
-    "mongoose-unique-validator": "^2.0.4",
-    "nodemon": "^2.0.13",
+    "mongodb": "^3.7.3",
+    "mongoose": "^6.0.14",
+    "mongoose-unique-validator": "^3.0.0",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "qrcode": "^1.4.4",
+    "qrcode": "^1.5.0",
     "sastrawijs": "^1.0.4",
     "socket.io": "^3.1.2",
     "translatte": "^3.0.1",
-    "whatsapp-web.js": "^1.14.1"
+    "whatsapp-web.js": "^1.15.2"
   },
   "devDependencies": {
-    "dotenv": "^8.6.0"
+    "dotenv": "^8.6.0",
+    "install-peers": "^1.0.3"
   }
 }
