--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
-    "gyp": "^0.5.0",
+    "gyp": "^0.3.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.7.3",
     "mongoose": "^6.0.14",
+    "mongoose-paginate-v2": "^1.4.2",
     "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.4.1",
